--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=8080
 spring.application.name=noticias-service
+
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/curso_sprinboot
+spring.datasource.username=devdb
+spring.datasource.password=a1b2c3d4
+
+
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.show-sql=true
