--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>co.edu.uceva</groupId>
 	<artifactId>noticias-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>noticias-service</name>
 	<description>noticias-service</description>
 	<url/>
